--- a/FirstFrameworkDesign/test-output/index.html
+++ b/FirstFrameworkDesign/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\FALMS\Desktop\Eclipse projects\SELENIUM FRAMEWORKS\FirstFrameworkDesign\testng.xml</span>
+                    <span>C:\Users\FALMS\Desktop\ramananrepository\FirstFrameworkDesign\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -162,7 +162,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\FALMS\Desktop\Eclipse projects\SELENIUM FRAMEWORKS\FirstFrameworkDesign\testng.xml</span>
+            <span class="header-content">C:\Users\FALMS\Desktop\ramananrepository\FirstFrameworkDesign\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -215,20 +215,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'f')
 data.setCell(0, 2, 'testsuite.NewTest')
-data.setCell(0, 3, 11780);
+data.setCell(0, 3, 12929);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'f')
 data.setCell(1, 2, 'testsuite.NewTest')
-data.setCell(1, 3, 11091);
+data.setCell(1, 3, 11565);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'f')
 data.setCell(2, 2, 'testsuite.NewTest')
-data.setCell(2, 3, 10431);
+data.setCell(2, 3, 11310);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 33 seconds</span>
+              <span class="suite-total-time">Total running time: 35 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -261,11 +261,11 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">f(Firefox, https://amazon.com)</span>
-                <span class="method-start">11094 ms</span>
+                <span class="method-start">11314 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">f(Firefox, https://google.com)</span>
-                <span class="method-start">21527 ms</span>
+                <span class="method-start">24245 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
