--- a/FirstFrameworkDesign/test-output/emailable-report.html
+++ b/FirstFrameworkDesign/test-output/emailable-report.html
@@ -9,12 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite1</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">43,665</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num attn">1</td><td class="num">0</td><td class="num">0</td><td class="num">29,505</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testsuite.NewTest</td><td><a href="#m0">f</a></td><td rowspan="3">1573472290753</td><td rowspan="3">16551</td></tr><tr class="passedeven"><td><a href="#m1">f</a></td></tr><tr class="passedeven"><td><a href="#m2">f</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">testsuite.NewTest</td><td><a href="#m0">skiptest</a></td><td rowspan="1">1573712075048</td><td rowspan="1">1</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testsuite.NewTest</td><td><a href="#m1">launchBrowserurl</a></td><td rowspan="1">1573712046312</td><td rowspan="1">28729</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">testsuite.NewTest#f</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Firefox</td><td>https://google.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testsuite.NewTest#f</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Chrome</td><td>https://flipkart.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testsuite.NewTest#f</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Opera</td><td>https://amazon.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">testsuite.NewTest#skiptest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: Skipping this exception
+	at testsuite.NewTest.skiptest(NewTest.java:44)
+	at java.util.ArrayList.forEach(Unknown Source)
+... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testsuite.NewTest#launchBrowserurl</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Chrome</td><td>https://flipkart.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
