--- a/FirstFrameworkDesign/test-output/old/Suite1/classes.html
+++ b/FirstFrameworkDesign/test-output/old/Suite1/classes.html
@@ -11,7 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>f</td>
+<td>launchBrowserurl</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>skiptest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
