--- a/FirstFrameworkDesign/test-output/old/Suite1/methods-alphabetical.html
+++ b/FirstFrameworkDesign/test-output/old/Suite1/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ec7f6c">  <td>19/11/11 17:07:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f(java.lang.String, java.lang.String)[pri:0, instance:testsuite.NewTest@131276c2]">f</td> 
-  <td>main@1615056168</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>19/11/11 17:08:00</td>   <td>15508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f(java.lang.String, java.lang.String)[pri:0, instance:testsuite.NewTest@131276c2]">f</td> 
-  <td>main@1615056168</td>   <td></td> </tr>
-<tr bgcolor="ec7f6c">  <td>19/11/11 17:08:10</td>   <td>26222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f(java.lang.String, java.lang.String)[pri:0, instance:testsuite.NewTest@131276c2]">f</td> 
-  <td>main@1615056168</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>19/11/14 11:44:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.launchBrowserurl(java.lang.String, java.lang.String)[pri:0, instance:testsuite.NewTest@711f39f9]">launchBrowserurl</td> 
+  <td>main@1543237999</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>19/11/14 11:44:35</td>   <td>28736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.skiptest()[pri:0, instance:testsuite.NewTest@711f39f9]">skiptest</td> 
+  <td>main@1543237999</td>   <td></td> </tr>
 </table>
